--- a/portfolio.css
+++ b/portfolio.css
@@ -20,6 +20,13 @@ body {
   font-size: 36px;
   font-weight: bold;
   margin: 0;
+  line-height: 30px;
+}
+
+.projects p {
+  font-size: 16px;
+  font-family: var(--default-font-family);
+  line-height: 27px;
 }
 
 .hero h2 {
@@ -27,6 +34,12 @@ body {
   font-size: 24px;
   font-weight: 400;
   line-height: 2;
+}
+
+.projects h2 {
+  font-family: var(--heading-font-family);
+  font-size: 64px;
+  font-weight: bold;
 }
 
 .btn-branding {
@@ -42,4 +55,41 @@ body {
   background: var(--secondary-color);
   text-align: center;
   padding: 160px 20px;
+}
+
+.btn-branding-outline {
+  color: var(--branding-color);
+  border: 1px solid var(--branding-color);
+  border-radius: 4px;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
+}
+
+.project-desciption {
+  padding: 60px 30px;
+}
+
+@media (max-width: 900px) {
+  .project-desciption {
+    padding: 0;
+    text-align: center;
+  }
+
+  .hero h1 {
+    font-size: 60px;
+    line-height: 1.25;
+  }
+  .hero h2 {
+    font-size: 14px;
+    line-height: 2;
+  }
+
+  .projects h2 {
+    font-size: 44px;
+  }
+
+  .hero {
+    padding: 120px 20px;
+  }
 }
