--- a/portfolio.css
+++ b/portfolio.css
@@ -5,13 +5,15 @@
   --default-font-family: "Poppins", sans-serif;
 }
 
-body {
-  text-align: center;
-}
-
 .hero h1 {
   font-family: var(--heading-font-family);
   font-size: 96px;
+  font-weight: bold;
+}
+
+.about-section h1 {
+  font-family: var(--heading-font-family);
+  font-size: 64px;
   font-weight: bold;
 }
 
@@ -29,11 +31,23 @@ body {
   line-height: 27px;
 }
 
+.about-section h2 {
+  font-family: var(--default-font-family);
+  font-size: 16px;
+}
+
 .hero h2 {
   font-family: var(--default-font-family);
   font-size: 24px;
   font-weight: 400;
-  line-height: 2;
+  line-height: 1.5;
+}
+
+.about-section h2 {
+  font-family: var(--default-font-family);
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 60px;
 }
 
 .projects h2 {
@@ -70,26 +84,21 @@ body {
   padding: 60px 30px;
 }
 
+.about-section {
+  padding: 160px 20px;
+}
+
+.about-section-content {
+  margin: 30px;
+}
+
 @media (max-width: 900px) {
   .project-desciption {
     padding: 0;
     text-align: center;
   }
+}
 
-  .hero h1 {
-    font-size: 60px;
-    line-height: 1.25;
-  }
-  .hero h2 {
-    font-size: 14px;
-    line-height: 2;
-  }
-
-  .projects h2 {
-    font-size: 44px;
-  }
-
-  .hero {
-    padding: 120px 20px;
-  }
+.hero {
+  padding: 120px 20px;
 }
