--- a/portfolio.css
+++ b/portfolio.css
@@ -40,7 +40,7 @@
   font-family: var(--default-font-family);
   font-size: 24px;
   font-weight: 400;
-  line-height: 1.5;
+  line-height: 2;
 }
 
 .about-section h2 {
@@ -92,13 +92,41 @@
   margin: 30px;
 }
 
+.hero {
+  padding: 120px 20px;
+}
+
+.content h1 {
+  padding: 177px 0px 103px 0px;
+  font-family: var(--heading-font-family);
+  font-size: 64px;
+  font-weight: bold;
+}
+
+.content-container p {
+  text-align: center;
+  font-size: 24px;
+  font-weight: 400;
+  font-family: var(--default-font-family);
+}
+
+.content-container h3 {
+  text-align: center;
+  font-family: var(--default-font-family);
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 36px;
+  padding-top: 20px;
+}
+
 @media (max-width: 900px) {
   .project-desciption {
     padding: 0;
     text-align: center;
   }
-}
 
-.hero {
-  padding: 120px 20px;
+  .content h1 {
+    text-align: center;
+    padding: 100px 0px 70px 0px;
+  }
 }
